# Production_RAG

./: .env  main.py  pyproject.toml
app/: config.py
app/agent/: graph.py  models.py
app/agent/document_loaders/: doc_loader.py
app/agent/pipeline/: rag.py
app/agent/retrievers/: vector_retriever.py
app/core/: config.py  exceptions.py  logging.py
app/core/agent/: graph.py  models.py
app/core/agent/document_loaders/: doc_loader.py
app/core/agent/retrievers/: vector_retriever.py
app/schemas/: agent.py
app/services/: llm.py
app/utils/: graph.py  retriever.py
